# evo-embodied

./: .gitignore  COURSE_MAPPING.md  README.md  pyproject.toml  setup.sh
docs/: FITNESS_DESIGN.md
examples/: 00_reference_demos.py  01_hello_mujoco.py  02_quadruped_random_search.py  03_mjx_parallel_evolution.py  04_render_evolved_quadruped.py  05_walking_quadruped.py  06_llm_guided_evolution.py  07_robomorph.py  08_llamea_strategy.py  09_coordinated_gait.py  10_bittle_gait.py  11_domain_randomization.py
experiments/: render_from_weights.py  sweep.py
models/: quadruped.xml  single_link.xml
models/bittle/: bittle.xml
sim2real/: deploy_bittle.py
slurm/: coordinated_gait.sbatch  render_all.sbatch  sweep.sbatch
