[project]
name = "evo-embodied"
version = "0.1.0"
description = "Modern evolutionary robotics environment: MuJoCo + MJX + JAX replacing pyrosim/pybullet"
requires-python = ">=3.12"
dependencies = [
    "mujoco>=3.2",
    "mujoco-mjx>=3.2",
    "jax>=0.4.35",
    "jaxlib>=0.4.35",
    "numpy>=1.26",
    "matplotlib>=3.8",
    "mediapy>=1.2",
    "jupyterlab>=4.0",
    "ipywidgets>=8.0",
    "ipykernel>=6.0",
]

[project.optional-dependencies]
gpu = ["jax[cuda13]>=0.8.0"]
strategies = ["evosax>=0.1"]
rl = ["brax>=0.12", "dm_control>=1.0"]
demos = ["mujoco-playground>=0.1", "onnxruntime>=1.17"]
llm = ["openai>=1.0"]
full = ["evo-embodied[gpu,strategies,rl,demos,llm]"]
